// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner Button Component Unit Testing Test Spinner Button Cases 1`] = `
<button
  className="w-full btn-primary"
  disabled={true}
  type="submit"
/>
`;

exports[`Spinner Button Component Unit Testing Test Spinner Button Cases 2`] = `
<button
  className="w-full btn-primary"
  disabled={false}
  type="submit"
/>
`;

exports[`Spinner Button Component Unit Testing Test Spinner Button Cases 3`] = `
<button
  className="w-full btn-primary"
  disabled={true}
  type="submit"
/>
`;

exports[`Spinner Button Component Unit Testing Test Spinner Button Cases 4`] = `
<button
  className="w-full btn-primary"
  disabled={true}
  type="submit"
/>
`;
